--- a/test.css
+++ b/test.css
@@ -3,8 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    transition: all 0.3s;
-    scroll-behavior: smooth;
+    
 }
 body {
     overflow-x: hidden;
@@ -123,54 +122,12 @@ body {
     font-size: 13px;
     border-bottom: 3px solid rgb(72, 152, 168);
 }
-
-.hero {
-    background-image: url(body.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 15cm;
-    border-bottom: 3px solid rgb(25, 110, 129);
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.hero::after{
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(2, 217, 255, 0.637);
-}
-.hero h2{
-    z-index: 1;
-    
-   
-}
-
-.hero h2 a{
-    text-decoration: none;
-    color: white ;
-    transition: all 0.5s;
-    z-index: 1;
-    border: 3px white solid;
-    padding: 20px 30px ;
-    background-color: rgba(243, 240, 240, 0.4);
-    border-radius: 3px;
-   
-
-}
-.hero h2 a:hover {
-    color: rgb(12, 215, 255);
-    border-color: rgb(12, 215, 255);
-}
-
-.about {
-    margin-top: 20cm;
-    background-color: blue;
-    
-}
+@media  screen and (max-width:576px) {
+    .menu_bar h1 {
+        font-size: 20px;
+    }
+    .menu_bar img {
+        margin-right: 1cm;
+        
+    }
+    }
