--- a/test.css
+++ b/test.css
@@ -7,7 +7,6 @@
 }
 body {
     overflow-x: hidden;
-    background-color: rgb(227, 232, 232);
     height: 50cm;
 }
 .menu_bar {
@@ -18,7 +17,7 @@ body {
     padding: 5px;
     width: 100%;
     background-color: white;
-    border-bottom: 3px solid rgb(25, 110, 129);
+    margin-top: 10px;
 
     
 }
@@ -28,13 +27,15 @@ body {
     
 }
 .menu_bar h1{
-    font-size: 25px;
-    color:rgb(72, 152, 168) ;
+    font-size: 30px;
+    color:rgb(15, 129, 155) ;
     margin-right: 10cm;
+    margin-top: 10px;
     transition: all 0.3s;
 }
 .menu_bar h1:hover{
     color:rgb(25, 110, 129) ;
+    transition: all 2s;
     
 }
 .menu_bar ul {
@@ -51,10 +52,9 @@ body {
 }
 .menu_bar ul li a{
     text-decoration: none;
-    font-size: 17px;
-    color: rgb(72, 152, 168);
+    font-size: 20px;
+    color: black;
     transition: all 0.3s;
-    padding: 5px;
     
 }
 
@@ -76,24 +76,27 @@ body {
 .menu-toggle span{
     display:block;
     border-radius: 3px;
-    color: rgb(72, 152, 168) ;
-    font-size: 17px;
+    color: black;
+    font-size: 20px;
     
 }
 
-
 .menu-toggle input {
     position: absolute;
-    width: 3.2cm;
-    height: 1.45cm;
-    top: -20px;
-    left: -30px;
+    width: 1.9cm;
+    height: 1.9cm;
+    top: -30px;
+    left: 2px;
     opacity: 0;
     cursor: pointer;
 }
 .menu-toggle input:checked ~ span{
     color: rgb(1, 200, 245);
     
+}
+.menu-toggle input:hover ~ span{
+    color:rgb(1, 200, 245);
+    transition: all 0.3s;
 }
 .menu-toggle ul{
     display: flex;
@@ -119,6 +122,36 @@ body {
     transform: translateX(0);
 }
 .menu-toggle ul li a{
-    font-size: 13px;
+    font-size: 15px;
     border-bottom: 3px solid rgb(72, 152, 168);
+}
+.hero img {
+    width: 16cm;
+    height: 16cm;
+    margin-left: 2cm;
+}
+.hero {
+    display: flex;
+}
+.text {
+    margin-top: 5cm;
+}
+.text h2{
+    font-size: 30px;
+    color: black;
+}
+.text a{
+    text-decoration: none;
+    color: white;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 7px 45px;
+    font-size: 20px;
+    background-color: rgb(15, 129, 155);;
+    border-color: rgb(15, 129, 155);
+}
+.text a:hover {
+    background-color: rgb(1, 200, 245);
+    transition: 0.5s;
+    border-color: rgb(1, 200, 245);
 }
