--- a/test.css
+++ b/test.css
@@ -59,69 +59,7 @@ body {
 .menu_bar ul li a:hover{
     color: rgb(1, 200, 245);
 }
-.menu-toggle{
-    margin-right: 0.8cm;
-    display: flex;
-    flex-direction: column;
-    height: 20px;
-    justify-content: space-between;
-    position: relative;
-    z-index: 2;
-    
-    
-}
-.menu-toggle span{
-    display:block;
-    border-radius: 3px;
-    color: rgb(15, 129, 155);
-    font-size: 20px;
-    
-}
 
-.menu-toggle input {
-    position: absolute;
-    width: 1.9cm;
-    height: 1.9cm;
-    top: -30px;
-    left: 2px;
-    opacity: 0;
-    cursor: pointer;
-}
-.menu-toggle input:checked ~ span{
-    color: rgb(1, 200, 245);
-    
-}
-.menu-toggle input:hover ~ span{
-    color:rgb(1, 200, 245);
-    transition: all 0.3s;
-}
-.menu-toggle ul{
-    display: flex;
-    position: absolute;
-    right: -40px;
-    height: 3cm;
-    width: 4cm;
-    flex-direction: column;
-    background-color: white;
-    top: 1cm;
-    align-items:flex-start;
-    justify-content: space-evenly;
-    z-index: -1;
-    transform: translateX(100%);
-    transition: all 1s;
-    opacity: 0;
-    border-bottom: 3px solid rgb(72, 152, 168);
-    
-    
-}
-.menu-toggle ul.slide {
-    opacity: 1;
-    transform: translateX(0);
-}
-.menu-toggle ul li a{
-    font-size: 15px;
-    border-bottom: 3px solid rgb(72, 152, 168);
-}
 .hero img {
     width: 15cm;
     height: 15cm;
@@ -142,14 +80,31 @@ body {
     text-decoration: none;
     color: white;
     border: 2px solid black;
+    font-weight: bold;
     border-radius: 20px;
     padding: 7px 45px;
-    font-size: 20px;
+    font-size: 15px;
     background-color: rgb(15, 129, 155);;
     border-color: rgb(15, 129, 155);
+
 }
 .text a:hover {
+    color: black;
+    transition: all 0.5s;
+}
+.olx a:hover{
+    color: black;
+    transition: all 0.5s;
+}
+.olx {
+    position: absolute;
+    right: 10cm;
+    top: 9cm;
+}
+.olx a{
+    font-size: 15px;
     background-color: rgb(1, 200, 245);
-    transition: 0.5s;
+    font-weight: bold;
     border-color: rgb(1, 200, 245);
 }
+
